# ChangeLog for media-libs/mesa
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/mesa/ChangeLog,v 1.207 2009/04/29 17:16:18 scarabeus Exp $

*mesa-7.4.1-r1 (29 Apr 2009)

  29 Apr 2009; Tomas Chvatal <scarabeus@gentoo.org> -mesa-7.4.1.ebuild,
  +mesa-7.4.1-r1.ebuild:
  Add some upstream patches that fixes various segfaluts. Revbump in the
  process :]

*mesa-7.4.1 (29 Apr 2009)

  29 Apr 2009; Tomas Chvatal <scarabeus@gentoo.org> -mesa-7.1_rc3.ebuild,
  -mesa-7.2_rc1.ebuild, -mesa-7.4_rc1.ebuild, +mesa-7.4.1.ebuild:
  Version bump. Remove _rc releases.

  16 Apr 2009; Jeroen Roovers <jer@gentoo.org> mesa-7.3-r1.ebuild:
  Stable for HPPA (bug #251832).

  15 Apr 2009; Raúl Porcel <armin76@gentoo.org> mesa-7.3-r1.ebuild:
  ia64/sh stable wrt #251832

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> mesa-7.3-r1.ebuild:
  Stable on sparc, bug #251832

  05 Apr 2009; Markus Meier <maekke@gentoo.org> mesa-7.3-r1.ebuild:
  x86 stable, bug #251832

  05 Apr 2009; Olivier Crête <tester@gentoo.org> mesa-7.3-r1.ebuild:
  Stable on amd64, bug #251832

  05 Apr 2009; Olivier Crête <tester@gentoo.org> mesa-7.3-r1.ebuild:
  Stable on amd64, bug #251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> mesa-7.3-r1.ebuild:
  Marking mesa-7.3-r1 ppc64 stable for bug 251832

  03 Apr 2009; Brent Baude <ranger@gentoo.org> mesa-7.3-r1.ebuild:
  Marking mesa-7.3-r1 ppc stable for bug 251832

*mesa-7.4 (29 Mar 2009)

  29 Mar 2009; Rémi Cardona <remi@gentoo.org>
  +files/7.4-fix-parallel-make.patch, +mesa-7.4.ebuild:
  bump to 7.4 with parallel make patch

  26 Mar 2009; Tomas Chvatal <scarabeus@gentoo.org> mesa-7.4_rc1.ebuild:
  We should depend on xcb? not on xcb= as usedep for libX11. Already fixed
  in overlay.

  26 Mar 2009; Rémi Cardona <remi@gentoo.org> -mesa-7.3-r2.ebuild:
  drop 7.3-r2, it's almost identical to 7.4_rc1

*mesa-7.4_rc1 (25 Mar 2009)
